--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta
+    <!-- <meta
       http-equiv="Content-Security-Policy"
       content="upgrade-insecure-requests"
-    />
+    /> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
